--- a/success.css
+++ b/success.css
@@ -72,6 +72,19 @@ body {
   font-weight: bold;
   padding: 1rem;
   border-radius: 0.5rem;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
+.dismiss:hover {
+  background: linear-gradient(
+    to right,
+    hsl(339, 100%, 62%),
+    hsl(15, 100%, 61%)
+  );
+  box-shadow: 0px 0px 20px var(--tomato);
+  transition: all 0.3s;
 }
 
 @media (min-width: 450px) {
